# axi_m

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  mkdocs.yml  package.json  project.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
AXIOM_Ontological_Framework/: README.md  __init__.py
AXIOM_Ontological_Framework/axiom_core/: __init__.py  axiom_system.py  epistemic_telemetry.py  ethical_manifolds.py  meta_constraint.py
AXIOM_Ontological_Framework/axiomm-project/: run_axiomm_example.py
AXIOM_Ontological_Framework/axiomm-project/docs/: architecture.md
AXIOM_Ontological_Framework/axiomm-project/scripts/: axiomm_cli.py
AXIOM_Ontological_Framework/root-project/: .env.sample
AXIOM_Ontological_Framework/root-project/agent/: ethics.py
AXIOM_Ontological_Framework/root-project/api/: README.md  middleware.py
AXIOM_Ontological_Framework/root-project/auth/: config.py  oauth.py
AXIOM_Ontological_Framework/root-project/core/domain/: models.py  rules.py
AXIOM_Ontological_Framework/root-project/core/services/: engine.py
AXIOM_Ontological_Framework/root-project/data/: etl_pipeline.py
AXIOM_Ontological_Framework/root-project/tests/: test_api.py  test_core.py
AXIOM_Ontological_Framework/tests/: __init__.py  test_axiom_system.py
assets/: .gitkeep
axiomm-project/src/axiomm/core/: axiom_system.py  (+3 more)
ci/: .gitkeep
configs/: .gitkeep
data/: .gitkeep
docs/: advanced-cognitive-engineering-case-study.md  developer-guide.md  index.md
docs/adr/: 0001-standardized-structure.md  0002-observability-foundation.md
docs/legacy/: LICENSE_AXIOM_Ontological_Framework  README.md
docs/legacy/axiomm-project/: LICENSE  README.md  run_axiomm_example.py  setup.py
docs/legacy/axiomm-project-root/: README.md
docs/legacy/root-project/: MANIFESTO.md  README.md  requirements.txt
infra/: .gitkeep
sbom/: .gitkeep
scripts/: _helpers.sh  bootstrap  build  check  clean  clean.ps1  commitlint-hook  coverage  dev  e2e  ensure-spdx  fmt  gen-docs  lint  migrate  package  release  sbom  security-scan  test  typecheck  typecheck.ps1  update-deps
src/axiom_core/: __init__.py  axiom_system.py  epistemic_telemetry.py  ethical_manifolds.py  meta_constraint.py
tests/e2e/: .gitkeep
tests/fixtures/: .gitkeep
tests/integration/: .gitkeep
tests/unit/axiom_core/: test_axiom_system.py
(+76 files in other folders)
